--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Status Page</title>
+    <title>Press Wizards Status Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
     <script src="index.js"></script>
@@ -9,7 +9,7 @@
     <div class="pageContainer">
       <div class="headline">
         <img src="logo.svg" alt="Logo" width="200px" />
-        <span> System Status </span>
+        <span> Press Wizards Systems Status </span>
       </div>
       <div id="reports" class="reportContainer"></div>
       <div id="tooltip" class="tooltip" style="opacity: 0">
@@ -44,9 +44,7 @@
     </div>
     <footer>
       Forked from
-      <a href="https://github.com/statsig-io/statuspage/"
-        >Statsig's Open-Source Status Page</a
-      >.
+      Statsig's Open-Source Status Page.
     </footer>
   </body>
   <script>
